- renamed to our-services

--- a/contact-us/contact.html
+++ b/contact-us/contact.html
@@ -5865,7 +5865,7 @@ a.text-white.hb {
                     <a class="nav-link dropdown-item " href="track" >Tracking</a></li>
 
                 <li id="menu-item-3" class="nav-item  menu-item menu-item-type-custom menu-item-object-custom menu-parent-item menu-item--parent bd_menu_item">
-                    <a class="nav-link dropdown-item " href="cal" >Shipment Calculator</a></li>
+                    <a class="nav-link dropdown-item " href="our-services" >Shipment Calculator</a></li>
 
                 <li id="menu-item-5" class="nav-item  menu-item menu-item-type-custom menu-item-object-custom menu-parent-item menu-item--parent bd_menu_item">
                     <a class="nav-link dropdown-item " href="about" >About Us</a></li>
