--- a/our-services.html
+++ b/our-services.html
@@ -1167,7 +1167,7 @@ a.text-white.hb {
                     <a class="nav-link" href="track">Tracking</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="cal">Our Services</a>
+                    <a class="nav-link" href="our-services">Our Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about">About Us</a>
