--- a/track.html
+++ b/track.html
@@ -792,7 +792,7 @@ a.text-white.hb {
                     <a class="nav-link" href="track">Tracking</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="cal">Our Services</a>
+                    <a class="nav-link" href="our-services">Our Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about">About Us</a>
@@ -827,7 +827,7 @@ a.text-white.hb {
                     <a class="nav-link dropdown-item " href="track" >Tracking</a></li>
 
                 <li id="menu-item-3" class="nav-item  menu-item menu-item-type-custom menu-item-object-custom menu-parent-item menu-item--parent bd_menu_item">
-                    <a class="nav-link dropdown-item " href="cal" >Shipment Calculator</a></li>
+                    <a class="nav-link dropdown-item " href="our-services" >Shipment Calculator</a></li>
 
                 <li id="menu-item-5" class="nav-item  menu-item menu-item-type-custom menu-item-object-custom menu-parent-item menu-item--parent bd_menu_item">
                     <a class="nav-link dropdown-item " href="about" >About Us</a></li>
